--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.8.0",
+        "moment": "^2.26.0",
         "pusher-js": "^6.0.3"
     }
 }
