--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "laravel-echo": "^1.8.0",
         "moment": "^2.26.0",
-        "pusher-js": "^6.0.3"
+        "pusher-js": "^6.0.3",
+        "simple-peer": "^9.7.2"
     }
 }
